# sodium_change

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  agents.md  pyproject.toml
.github/workflows/: pre-commit.yml  tests.yml
data/: variability_defaults.json
docs/: CLINICAL_SCOPE.md  DECISIONS.md  PRIVACY.md  PUBLIC_COPY.md  SPEC.md  VALIDATION.md  VARIABILITY.md  app.py  index.html  styles.css  variability_defaults.json
docs/sodium_uncertainty/: __init__.py  defaults.py  model.py
http:/: CONTINUITY.md
notebooks/: codex_ticket_1.txt
scripts/: stage_docs_python.py
src/sodium_uncertainty/: __init__.py  calculator.py  defaults.py  model.py  types.py
tests/: test_calculator.py  test_defaults.py  test_model.py  test_static_assets.py
